@@ -9,6 +9,7 @@ New Features:
   * Add :class:`Glyph` :bug:`53`
   * Add :class:`Rectangle` :bug:`54`
   * Add :class:`TextCluster` :bug:`61`
+  * Add :meth:`ScaledFont.text_to_glyphs`
 
 Changes:
   * Pycairo instances wrapping the same underlying cairo object now compare
